2003/11/29 18:15 (+0100) ebassi

	* t/*: updated tests for constants modules change, and for unused
	  variables.
	* Makefile.PL: put constants modules in the right place.

2003/11/28 23:20 (+0100) ebassi

	* xs/GnomePrint2.xs: added methods:
		
		Gnome2::Print->get_version_info
		Gnome2::Print->check_version
	  
	  based on code from Torsten Schoenfeld; those methods replace the
	  get_version class method.

2003/11/28 19:00 (+0100) ebassi

	* xs/GnomeFont.xs, xs/GnomePrintJob.xs, xs/GnomePrintDialog.xs: added
	  apidoc for PPCODE sections.

2003/11/28 18:34 (+0100) ebassi

	* Makefile.PL, pm/Config.pm, pm/Font.pm, t/05.GnomeFont.t: moved
	  constants to another namespace to avoid collisions with the
	  respective classes; these are the new namespaces for Config and
	  Font constants:
	  	
		Gnome2::Print::Config -> Gnome2::Print::Config::Constants
		Gnome2::Print::Font   -> Gnome2::Print::Font::Constants

2003/11/25 17:26 (-0500) rwmcfa1

	* Makefile.PL, xs/GnomePrint2.xs: add apidoc auto generation stuff

2003/11/25 17:26 (-0500) rwmcfa1

	* Makefile.PL: we depend on Gnome2-VFS now b/c Gnome2 does.

2003/11/24 23:02 (-0500) rwmcfa1

	* perl-Gnome2-Print.spec.in: fixed requires bug.

2003/11/13 21:15 (-0500) muppetman


	* Makefile.PL, README: require 1.00 rather than 1.00rc1 -- we disavow
	the existence of the release candidates.

2003/11/11 00:36 (-0500) muppetman

	* MANIFEST, debian/*: remove the debian packaging files, since having
	them in the upstream dist makes it difficult for the maintainers

2003/10/20 19:59 ebassi

	* t/05.GnomeFont.t: included tests for newly implemented methods.
	* pm/Font.pm: corrected stupid typo inside package name.
	* xs/GnomeFont.xs: implemented
		gnome_font_get_glyph_stadvance
		gnome_font_get_glyph_stdbbox
		gnome_font_get_glyph_stdkerning
	  these methods requires libart structures, but since libart has no
	  perl binding, I've implemented the return values as arrayrefs of
	  doubles.
	* xs/GnomeFont.xs: implemented